--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -803,6 +803,14 @@ footer {
 .dark-mode .nav-left a {
   color: white;
 }
+
+.dark-mode .sidebar h2{
+  color: white
+}
+
+.dark-mode .sidebar ul li a{
+  color: white
+}
   </style>
   {% block css %}{% endblock %}
 </head>
