--- a/Eapp/templates/solar_tracking.html
+++ b/Eapp/templates/solar_tracking.html
@@ -355,7 +355,7 @@
     <section class="content-box">
         <h2 class="section-title">Solar Tracking Interfacing Diagram</h2>
         <div class="image-container">
-            <img src="{% static 'images/OTTO Interfacing Diagram.jpeg' %}" id="ottoImage"
+            <img src="{% static 'images/Solar Tracking System.png' %}" id="ottoImage"
                  style="max-width: 100%; height: auto; align-items: center;">
         </div>
     </section>
