--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -782,6 +782,15 @@ footer {
 .dark-mode .sidebar ul li a{
   color: white
 }
+p {
+    color: black;
+  }
+  @media (prefers-color-scheme: dark) {
+    p {
+      color: white;
+    }
+  }
+
   </style>
   {% block css %}{% endblock %}
 </head>
