--- a/Eapp/templates/otto.html
+++ b/Eapp/templates/otto.html
@@ -537,7 +537,7 @@
  
     <section class="content-box">
         <h2 class="section-title">Comprehensive Guide</h2>
-        <p style="color: black,.dark-mode color: white">
+        <p>
             This guide covers the step-by-step process to build, assemble, and program Otto.
             It includes schematics, 3D printing details, and coding instructions to bring your Otto robot to life.
         </p>
@@ -571,7 +571,7 @@
         <!-- 3D Model Viewer Section -->
 <section class="content-box">
     <h2 class="section-title">3D Model Viewer</h2>
-    <p style="color: black, .dark-mode color:white;">Explore the 3D printable components of Otto Robot.</p>
+    <p>Explore the 3D printable components of Otto Robot.</p>
     <div class="model-buttons">
         <a href="https://drive.google.com/file/d/1bVrAiP7W5oJ2_WA8KgbkxzhxjEunxegG/view?usp=drive_link" target="_blank">
             <button class="view-button">Click here to view Head</button>
