--- a/Eapp/templates/solar_tracking.html
+++ b/Eapp/templates/solar_tracking.html
@@ -271,7 +271,7 @@
 </style>
 </head>
 <body>
-    <header style="background-color:#fgfgfg; padding:20px; text-align:center; border-bottom:2px solid#ddd;">
+    <header style="background-color: black; padding: 20px; text-align: center; border-bottom: 2px solid #ddd;">
         <h1 style="font-weight: bold; font-size: 32px; margin: 0;color: white">Solar Tracking</h1>
     </header>
     
