update the base.html add domains

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -129,7 +129,7 @@
   top: 100%;
   left: 0;
   background-color: #fff;
-  min-width: 200px;
+  min-width: 230px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1000; /* Increase this value */
 }
@@ -809,28 +809,24 @@ footer {
     </div>
     <div class="nav-links">
       <!-- Products Dropdown -->
+      <a href="/home">Home</a>
       <div class="dropdown">
         <a href="#">Domains <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
           <a href="#" style="background-color: black; color: white;">Domains</a>
           <div class="product">
-            <a href="#">Microcontroller <strong>></strong></a>
+            <a href="#">Robotics <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#" style="background-color: black; color: white;">Arduino</a>
-              <a href="#">Arduino Uno</a>
-              <a href="#">Arduino Nano</a>
-              <a href="#">Arduino Mega</a>
-              <a href="#" style="background-color: black; color: white;">Raspberry Pi</a>
-              <a href="#">Raspberry Pi 4</a>
-              <a href="#">Raspberry Pi 3B+</a>
-              <a href="#">Raspberry Pi Pico</a>
-              <a href="#" style="background-color: black; color: white;">ESP32/ESP8266</a>
-              <a href="#">ESP32 DevKit V1</a>
-              <a href="#">ESP8266 NodeMCU</a>
+              <a href="#">Bionic Hande
+              <a href="#">Aster Robot</a>
+              <a href="#">otto Robot </a>
+              <a href="#">Home Automation</a>
+              <a href="#">Obstacle Avoidance car</a>
+              <a href="#">Real time Clock</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Motor Drivers <strong>></strong></a>
+            <a href="#">Biotech<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">L298N Motor Driver Module</a>
               <a href="#">L293D Motor Driver</a>
@@ -839,7 +835,7 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Motors <strong>></strong></a>
+            <a href="#">Home Automation <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#" style="background-color: black; color: white;">DC Motors</a>
               <a href="#">5V DC Motor</a>
@@ -855,21 +851,21 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Sensors <strong>></strong></a>
+            <a href="#">Iot <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Power Supply <strong>></strong></a>
+            <a href="#">AI&ML<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Mechanical Parts <strong>></strong></a>
+            <a href="#">Embedding System <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
@@ -877,20 +873,11 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Breadboard <strong>></strong></a>
+            <a href="#">Renewable Energy <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
               <a href="#">Details 3</a>
-            </div>
-          </div>
-          <div class="product">
-            <a href="#">Electronic Components <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 3</a>
-              <a href="#">Details 4</a>
             </div>
           </div>
         </div>
@@ -951,16 +938,6 @@ footer {
               <a href="#">Details 2</a>
             </div>
           </div>
-        </div>
-      </div>
- 
-      <!-- PHN Labs Dropdown -->
-      <div class="dropdown">
-        <a href="#">PHN Labs <i class="fa-solid fa-chevron-down"></i></a>
-        <div class="dropdown-content">
-          <a href="#">Lab 1</a>
-          <a href="#">Lab 2</a>
-          <a href="#">Lab 2</a>
         </div>
       </div>
     </div>
