changes in home pages

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -67,7 +67,7 @@
     padding: 6px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0px 5px 30px #666666; /* Adds a subtle shadow */
+    box-shadow: 0px 5px 60px #666666; /* Adds a subtle shadow */
     }
     .right-nav {
       display: flex;
@@ -806,28 +806,25 @@ footer {
     </div>
     <div class="nav-links">
       <!-- Products Dropdown -->
+  <!-- Products Dropdown -->
+      <a href="/home">Home</a>
       <div class="dropdown">
-        <a href="#">Products <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="#">Domains <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
-          <a href="#" style="background-color: #000000; color: white;">Products</a>
+          <a href="#" style="background-color: black; color: white;">Domains</a>
           <div class="product">
-            <a href="#">Microcontroller <strong>></strong></a>
+            <a href="#">Robotics <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#" style="background-color: #000000; color: white;">Arduino</a>
-              <a href="#">Arduino Uno</a>
-              <a href="#">Arduino Nano</a>
-              <a href="#">Arduino Mega</a>
-              <a href="#" style="background-color: #000000; color: white;">Raspberry Pi</a>
-              <a href="#">Raspberry Pi 4</a>
-              <a href="#">Raspberry Pi 3B+</a>
-              <a href="#">Raspberry Pi Pico</a>
-              <a href="#" style="background-color: #000000; color: white;">ESP32/ESP8266</a>
-              <a href="#">ESP32 DevKit V1</a>
-              <a href="#">ESP8266 NodeMCU</a>
+              <a href="#">Bionic Hande
+              <a href="#">Aster Robot</a>
+              <a href="#">otto Robot </a>
+              <a href="#">Home Automation</a>
+              <a href="#">Obstacle Avoidance car</a>
+              <a href="#">Real time Clock</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Motor Drivers <strong>></strong></a>
+            <a href="#">Biotech<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">L298N Motor Driver Module</a>
               <a href="#">L293D Motor Driver</a>
@@ -836,37 +833,37 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Motors <strong>></strong></a>
+            <a href="#">Home Automation <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#" style="background-color: #000000; color: white;">DC Motors</a>
+              <a href="#" style="background-color: black; color: white;">DC Motors</a>
               <a href="#">5V DC Motor</a>
               <a href="#">12V DC Motor</a>
               <a href="#">High Torque DC Motor</a>
-              <a href="#" style="background-color: #000000; color: white;">Servo Motors</a>
+              <a href="#" style="background-color: black; color: white;">Servo Motors</a>
               <a href="#">SG90 (9g Servo Motor)</a>
               <a href="#">MG996R (High Torque Servo)</a>
               <a href="#">MG90S (Micro Servo)</a>
-              <a href="#" style="background-color: #000000; color: white;">Stepper Motors</a>
+              <a href="#" style="background-color: black; color: white;">Stepper Motors</a>
               <a href="#">NEMA 17 Stepper Motor</a>
               <a href="#">28BYJ-48 Stepper Motor (with Driver)</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Sensors <strong>></strong></a>
+            <a href="#">Iot <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Power Supply <strong>></strong></a>
+            <a href="#">AI&ML<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
-            <a href="#">Mechanical Parts <strong>></strong></a>
+            <a href="#">Embedding System <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
@@ -874,30 +871,21 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Breadboard <strong>></strong></a>
+            <a href="#">Renewable Energy <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
               <a href="#">Details 3</a>
-            </div>
-          </div>
-          <div class="product">
-            <a href="#">Electronic Components <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 3</a>
-              <a href="#">Details 4</a>
             </div>
           </div>
         </div>
       </div>
-
+ 
       <!-- Projects Dropdown -->
       <div class="dropdown">
         <a href="#">Projects <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
-          <a href="#" style="background-color: #000000; color: white;">Projects</a>
+          <a href="#" style="background-color: black; color: white;">Projects</a>
           <!-- Project links with nested dropdowns -->
           <div class="project">
             <a href="#">Bionic Hand <strong>></strong></a>
@@ -948,16 +936,6 @@ footer {
               <a href="#">Details 2</a>
             </div>
           </div>
-        </div>
-      </div>
-
-      <!-- PHN Labs Dropdown -->
-      <div class="dropdown">
-        <a href="#">PHN Labs <i class="fa-solid fa-chevron-down"></i></a>
-        <div class="dropdown-content">
-          <a href="#">Lab 1</a>
-          <a href="#">Lab 2</a>
-          <a href="#">Lab 2</a>
         </div>
       </div>
     </div>
