changes in home page

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -1010,7 +1010,7 @@ footer {
           </div>
           <div class="contact-item">
             <i class="fas fa-map-marker-alt"></i>
-            <p>Solitaire Business Hub E Wing 5010, F wing 5010 & 5020, 5th Floor, Viman Nagar, Pune, Maharashtra 411014</p>
+            <p>PHN Technology Pvt Ltd.,Tower A, Giga Platinum, Somnath Nagar Rd, near Akoya Skoda Showroom, Clover Park, Viman Nagar, Pune, Maharashtra 411014</p>
         </div>
             </div>
         </div>
