changes in navbar

--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -801,6 +801,7 @@ footer {
     </div>
     <div class="nav-links">
       <!-- Products Dropdown -->
+      <a href="/home">Home</a>
       <div class="dropdown">
         <a href="#">Domains <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
