--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -815,8 +815,8 @@ footer {
           <div class="product">
             <a href="#">Robotics <strong>></strong></a>
             <div class="nested-dropdown">
-              <a href="#">Bionic Hande
-              <a href="#">Aster Robot</a>
+              <a href="#">Autonomous Robotics</a>
+              <a href="#">Industrial Robotics</a>
               <a href="#">otto Robot </a>
               <a href="#">Home Automation</a>
               <a href="#">Obstacle Avoidance car</a>
@@ -824,7 +824,7 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Biotech<strong>></strong></a>
+            <a href="#">Agriculture<strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">L298N Motor Driver Module</a>
               <a href="#">L293D Motor Driver</a>
@@ -833,7 +833,7 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Home Automation <strong>></strong></a>
+            <a href="#">Electronics <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#" style="background-color: black; color: white;">DC Motors</a>
               <a href="#">5V DC Motor</a>
@@ -849,29 +849,29 @@ footer {
             </div>
           </div>
           <div class="product">
-            <a href="#">Iot <strong>></strong></a>
+            <a href="#">IoT (Internet of Things) <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
+              <a href="#">Details 2</a>
+            </div>
+          </div>
+          <div class="product">
+            <a href="#">Healthcare<strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">Details 1</a>
+              <a href="#">Details 2</a>
+            </div>
+          </div>
+          <div class="product">
+            <a href="#">Defence Sector<strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">Details 1</a>
+              <a href="#">Details 2</a>
               <a href="#">Details 2</a>
             </div>
           </div>
           <div class="product">
             <a href="#">AI&ML<strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-            </div>
-          </div>
-          <div class="product">
-            <a href="#">Embedding System <strong>></strong></a>
-            <div class="nested-dropdown">
-              <a href="#">Details 1</a>
-              <a href="#">Details 2</a>
-              <a href="#">Details 2</a>
-            </div>
-          </div>
-          <div class="product">
-            <a href="#">Renewable Energy <strong>></strong></a>
             <div class="nested-dropdown">
               <a href="#">Details 1</a>
               <a href="#">Details 2</a>
